darwin-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__unified_exec_wait_before_streamed_agent_message.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: combined
---
• Waited for background terminal · cargo test -p darwin_code-core

• Streaming response.
