darwin-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__unified_exec_wait_status_renders_command_in_single_details_row.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalize_snapshot_paths(rendered)
---
╭───────────────────────────────────────╮
│ >_ Darwin Code (v0.0.1)         │
│                                       │
│ model:     loading   /model to change │
│ directory: /tmp/project               │
╰───────────────────────────────────────╯

• Waiting for background terminal (0s • esc to …
  └ cargo test -p darwin_code-core -- --exact…


› Explain this codebase

  gpt-5.3-darwin-code default · /tmp/project
